--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "mongoose": "^5.7.7",
+    "mongoose-unique-validator": "^2.0.3",
     "morgan": "~1.9.1",
     "nodemon": "^1.19.1"
   },
