--- a/server/package.json
+++ b/server/package.json
@@ -8,6 +8,7 @@
     "test": "NODE_ENV=test ./node_modules/.bin/mocha --require @babel/register --exit --timeout 30000"
   },
   "dependencies": {
+    "bcrypt": "^3.0.6",
     "concurrently": "^5.0.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
