--- a/server/package.json
+++ b/server/package.json
@@ -18,7 +18,8 @@
     "mongoose": "^5.7.7",
     "mongoose-unique-validator": "^2.0.3",
     "morgan": "~1.9.1",
-    "nodemon": "^1.19.1"
+    "nodemon": "^1.19.1",
+    "request": "^2.88.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.5.5",
