--- a/server/package.json
+++ b/server/package.json
@@ -8,6 +8,7 @@
     "test": "NODE_ENV=test ./node_modules/.bin/mocha --require @babel/register --exit --timeout 30000"
   },
   "dependencies": {
+    "aws-sdk": "^2.568.0",
     "bcrypt": "^3.0.6",
     "concurrently": "^5.0.0",
     "cookie-parser": "~1.4.4",
@@ -18,6 +19,8 @@
     "mongoose": "^5.7.7",
     "mongoose-unique-validator": "^2.0.3",
     "morgan": "~1.9.1",
+    "multer": "^1.4.2",
+    "multer-s3": "^2.9.0",
     "nodemon": "^1.19.1"
   },
   "devDependencies": {
