--- a/client/package.json
+++ b/client/package.json
@@ -4,8 +4,9 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.1.3",
-    "@material-ui/lab": "^4.0.0-alpha.30",
     "@material-ui/icons": "^4.5.1",
+    "@material-ui/lab": "^4.0.0-alpha.30",
+    "notistack": "^0.9.6",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.1",
