Implemented spotify linking after a user signs-up

--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "url": "https://github.com/hatchways/team-cupcake/issues"
   },
   "homepage": "https://github.com/hatchways/team-cupcake#readme",
-  "devDependencies": {
-    "request": "^2.88.0"
-  }
+  "devDependencies": {},
+  "dependencies": {}
 }
