--- a/server/package.json
+++ b/server/package.json
@@ -19,10 +19,11 @@
     "mongoose": "^5.7.7",
     "mongoose-unique-validator": "^2.0.3",
     "morgan": "~1.9.1",
+    "multer": "^1.4.2",
+    "multer-s3": "^2.9.0",
     "nodemon": "^1.19.1",
     "request": "^2.88.0",
-    "multer": "^1.4.2",
-    "multer-s3": "^2.9.0"
+    "socket.io": "^2.3.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.5.5",
