--- a/package.json
+++ b/package.json
@@ -19,6 +19,12 @@
   "homepage": "https://github.com/hatchways/team-cupcake#readme",
   "devDependencies": {},
   "dependencies": {
-    "request": "^2.88.0"
+    "aws-sdk": "^2.579.0",
+    "multer": "^1.4.2",
+    "multer-s3": "^2.9.0",
+    "notistack": "^0.9.6",
+    "react-autosuggest": "^9.4.3",
+    "request": "^2.88.0",
+    "socket.io": "^2.3.0"
   }
 }
