--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "npm run dev --prefix server"
+    "dev": "npm run dev --prefix server",
+    "start": "babel-node server/bin/www",
+    "heroku-postbuild": "cd server && npm install && cd ../client && npm install && npm run build"
   },
   "repository": {
     "type": "git",
@@ -17,8 +19,34 @@
     "url": "https://github.com/hatchways/team-cupcake/issues"
   },
   "homepage": "https://github.com/hatchways/team-cupcake#readme",
-  "devDependencies": {},
+  "devDependencies": {
+    "aws-sdk": "^2.568.0",
+    "bcrypt": "^3.0.6",
+    "concurrently": "^5.0.0",
+    "cookie-parser": "~1.4.4",
+    "debug": "~2.6.9",
+    "dotenv": "^8.0.0",
+    "express": "~4.16.1",
+    "http-errors": "~1.6.3",
+    "mongoose": "^5.7.7",
+    "mongoose-unique-validator": "^2.0.3",
+    "morgan": "~1.9.1",
+    "multer": "^1.4.2",
+    "multer-s3": "^2.9.0",
+    "nodemon": "^1.19.1",
+    "request": "^2.88.0",
+    "socket.io": "^2.3.0"
+  },
   "dependencies": {
-    "request": "^2.88.0"
+    "@babel/cli": "^7.5.5",
+    "@babel/core": "^7.5.5",
+    "@babel/node": "^7.5.5",
+    "@babel/preset-env": "^7.5.5",
+    "@babel/register": "^7.5.5",
+    "babel-node": "0.0.1-security",
+    "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
+    "jsonwebtoken": "^8.5.1",
+    "mocha": "^6.2.0"
   }
 }
