--- a/package.json
+++ b/package.json
@@ -1,25 +1,14 @@
 {
-  "name": "team-cupcake",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "name": "server",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "dev": "npm run dev --prefix server",
-    "start": "babel-node server/bin/www",
-    "heroku-postbuild": "cd server && npm install && cd ../client && npm install && npm run build"
+    "dev": "concurrently \"nodemon server/bin/www\" \"npm start --prefix client\"",
+    "test": "NODE_ENV=test ./node_modules/.bin/mocha --require @babel/register --exit --timeout 30000",
+    "start": "node server/bin/www",
+    "heroku-postbuild": "cd client && npm install && npm run build"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/hatchways/team-cupcake.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/hatchways/team-cupcake/issues"
-  },
-  "homepage": "https://github.com/hatchways/team-cupcake#readme",
-  "devDependencies": {
+  "dependencies": {
     "aws-sdk": "^2.568.0",
     "bcrypt": "^3.0.6",
     "concurrently": "^5.0.0",
@@ -37,13 +26,12 @@
     "request": "^2.88.0",
     "socket.io": "^2.3.0"
   },
-  "dependencies": {
-    "@babel/cli": "^7.5.5",
-    "@babel/core": "^7.5.5",
-    "@babel/node": "^7.5.5",
-    "@babel/preset-env": "^7.5.5",
-    "@babel/register": "^7.5.5",
-    "babel-node": "0.0.1-security",
+  "devDependencies": {
+    "@babel/cli": "^7.7.5",
+    "@babel/core": "^7.7.5",
+    "@babel/node": "^7.7.4",
+    "@babel/preset-env": "^7.7.5",
+    "@babel/register": "^7.7.4",
     "chai": "^4.2.0",
     "chai-http": "^4.3.0",
     "jsonwebtoken": "^8.5.1",
