--- a/server/package.json
+++ b/server/package.json
@@ -3,9 +3,13 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "babel-node ./bin/www",
+    "devStart": "babel-node ./bin/www",
     "dev": "concurrently \"nodemon --exec babel-node ./bin/www\" \"npm start --prefix ../client\"",
-    "test": "NODE_ENV=test ./node_modules/.bin/mocha --require @babel/register --exit --timeout 30000"
+    "test": "NODE_ENV=test ./node_modules/.bin/mocha --require @babel/register --exit --timeout 30000",
+    "start": "npm run build && node build/bin/www",
+    "build": "npm run clean && npm run babel-build",
+    "babel-build": "babel -d ./build ./ -s",
+    "clean": "mkdir build"
   },
   "dependencies": {
     "aws-sdk": "^2.568.0",
