--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,4 +24,4 @@ jobs: # a collection of steps
             - server/node_modules
       - run: # run tests
           name: test
-          command: cd server && npm test
+          command: npm test
