--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "devStart": "babel-node ./bin/www",
     "dev": "concurrently \"nodemon ./bin/www\" \"npm start --prefix ./client\"",
-    "test": "NODE_ENV=test ./node_modules/.bin/mocha --require @babel/register --exit --timeout 30000",
+    "test": "NODE_ENV=test ./node_modules/.bin/mocha --exit --timeout 30000",
     "start": "node server/bin/www"
   },
   "dependencies": {
