--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bcrypt": "^3.0.6",
     "concurrently": "^5.0.0",
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^8.0.0",
     "express": "~4.16.1",
